cmake_minimum_required (VERSION 2.8)
find_package (Threads REQUIRED)
find_package (Protobuf REQUIRED)
project (filetransfer)

set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Werror -Wall" )
set (LIBS protobuf muduo_net_cpp11 muduo_base_cpp11 pthread )
add_executable (ftclient client.cpp Codec.cpp FileTransfer.pb.cc)
add_executable (ftserver server.cpp Codec.cpp FileTransfer.pb.cc)
target_link_libraries (ftclient ${LIBS})
target_link_libraries (ftserver ${LIBS})
